@@ -127,6 +127,9 @@ Bug Fixes
 
 * SOLR-5811: The Overseer will retry work items until success, which is a serious
   problem if you hit a bad work item. (Mark Miller)
+  
+* SOLR-5796: Increase how long we are willing to wait for a core to see the ZK
+  advertised leader in it's local state. (Timothy Potter, Mark Miller)  
 
 Optimizations
 ----------------------
@@ -167,6 +170,10 @@ Other Changes
   if a Term to be indexed exceeds IndexWriter.MAX_TERM_LENGTH.  To recreate previous
   behavior of silently ignoring these terms, use LengthFilter in your Analyzer.
   (hossman, Mike McCandless, Varun Thacker)
+
+* SOLR-5796: Make how long we are willing to wait for a core to see the ZK
+  advertised leader in it's local state configurable. 
+  (Timothy Potter via Mark Miller)
 
 ==================  4.7.0 ==================
 
